<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP -->
    <string name="app_name">UADE-PFI</string>

    <!-- MAIN Activity -->
    <string name="checkInButton">Check In</string>
    <string name="checkOutButton">Check Out</string>
    <string name="mapButton">Show Map</string>

    <!-- CHECKIN Activity -->
    <string name="checkInOKButton">Check In!</string>
    <string name="checkInTransportIdLbl">Transport Id:</string>

    <!-- MAP Activity -->
    <string name="show_map_menu_refresh">Refresh</string>
    <string name="show_map_menu_filter">Filter</string>
    
    <!-- SELECT TRANSPORT Activity -->
    <string name="transportType_prompt">Seleccione Transporte</string>
    <string-array name="transportType_arrays">
        <item>Colectivo</item>
        <item>Tren</item>
        <item>Subte</item>
        <item>Barco</item>
    </string-array>
    
    <string name="headingType_prompt">Seleccione Sentido</string>
    <string-array name="headingType_arrays">
        <item>IDA</item>
        <item>VUELTA</item>
    </string-array>
    
    <string name="line_prompt">Seleccione Sentido</string>
    <string-array name="line_arrays">
        <item>152</item>
        <item>59</item>
    </string-array>
    
    <string name="branch_prompt">Seleccione Sentido</string>
    <string-array name="branch_arrays">
        <item>SR</item>
        <item>Comun</item>
    </string-array>

    <!-- SERVER Facade -->
    <string name="baseURL">http://192.168.1.96:8080/web</string>
    <string name="checkInURL">/checkIn.json</string>
    <string name="getAllLocationsFromServerURL">/getAllLocations.json</string>
    <string name="postLocationToServerURL">/postLocation.json</string>
    <string name="getTransportListByFromServerURL">/transportListBy.json</string>
    <string name="getTransportTypeListByFromServerURL">/transportTypeList.json</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_select_transport">SelectTransportActivity</string>

</resources>