<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button 
        android:text="@string/checkInButton" 
        android:id="@+id/checkInButton" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:onClick="checkIn" />
    
    <Button android:text="@string/checkOutButton" 
        android:id="@+id/checkOutButton" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:onClick="checkOut"/>
    
    <Button android:text="@string/mapButton" 
        android:id="@+id/mapButton" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:onClick="showMap"/>

</LinearLayout>
